5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1578_996.log
== TEST (2019-03-11 19:49:45) 
-- CODE:
print****
print(* o o *)
print*  ^  *
print* --- *
prin*****
-- ERROR:
File "XXXX", line 1
    print****
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:50:02) 
-- CODE:
print ****
print(* o o *)
print*  ^  *
print* --- *
prin *****
-- ERROR:
File "XXXX", line 1
    print ****
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(****)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:50:42) 
-- CODE:
print*****
print(* o o *)
print*  ^  *
print* --- *
prin*****
-- ERROR:
File "XXXX", line 1
    print*****
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:08) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
prin("   *****")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin("   *****")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:56:18) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
prin   ("*****")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin   ("*****")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:56:56) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
prin   ("*****")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin   ("*****")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:56:57) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
prin   ("*****")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin   ("*****")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:56:58) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
prin   ("*****")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin   ("*****")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:56:58) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
prin   ("*****")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin   ("*****")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:56:58) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
prin   ("*****")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin   ("*****")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:57:21) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
prin   ("*****")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    prin   ("*****")
NameError: name 'prin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:57:59) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:58:04) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
-- EXECUTION TIME:
0.139093
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:35:01) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
-- EXECUTION TIME:
0.171301
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:35:11) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
-- EXECUTION TIME:
0.147736
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:37:22) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
-- EXECUTION TIME:
0.164372
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:04:41) 
-- CODE:
print  ("*****")
print("(* o o *)")
print ("*  ^  *")
print ("* --- *")
print  ("*****")
-- EXECUTION TIME:
0.184125
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
